# ans_flex

./: Cargo.toml  LICENSE  README.md  main
benches/: benchmark.rs
bitstream/: Cargo.toml
bitstream/src/: lib.rs
common/: Cargo.toml
common/benches/: benchmark.rs
common/src/: error.rs  lib.rs  table.rs
hist/: Cargo.toml
hist/src/: lib.rs
hufflpuff/: Cargo.toml
hufflpuff/benches/: benchmark.rs
hufflpuff/fuzz/: Cargo.toml
hufflpuff/fuzz/fuzz_targets/: test_prefix_property.rs  test_prefix_property_limit_length_1.rs  test_prefix_property_limit_length_x.rs
hufflpuff/src/: compress.rs  decompress.rs  lib.rs
hufflpuff/src/tree/: build_tree.rs  mod.rs  render_tree.rs  tree.rs  tree_node.rs
src/: bitstream.rs  compress.rs  decompress.rs  hist.rs  lib.rs  table.rs
test_data/: v4_uuids_19k.txt  v4_uuids_93k.txt
