[package]
name = "ans_flex"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.13"

[dependencies.bitstream]
path = "bitstream"
[dependencies.common]
path = "common"

[dependencies.hufflpuff]
path = "hufflpuff"

[dev-dependencies]
env_logger = "0.8.2"
criterion = "0.3.4"

[[bench]]
name = "benchmark"
harness = false


[[bin]]
name = "prof"
path = "src/bin/prof.rs"

[profile.release]
debug = true
lto = true
opt-level = 3

[workspace]

members = [
    ".",
    "hufflpuff",
    "common",
    "bitstream",
]
