[package]
name = "hufflpuff"
version = "0.1.0"
authors = ["Pascal Seitz <pascal.seitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.4"
dot = { git = "https://github.com/PSeitz/dot", branch = "main" }

# [dependencies.ans_flex]
# path = "../"

[dependencies.bitstream]
path = "../bitstream"

[dependencies.common]
path = "../common"


[[bench]]
name = "benchmark"
harness = false
